Fix image cropper

--- a/src/guessTheImage/guessTheImage.css
+++ b/src/guessTheImage/guessTheImage.css
@@ -21,10 +21,7 @@
     cursor: pointer;
   }
 
-  .image {
-    max-height: 100%;
-  }
-
   .cropped-image {
     height: 100vh;
+    object-fit: cover;
   }
